# evl_en_word_score_service

./: .gitignore  README.md  url.txt
src/: CMakeLists.txt
src/config/: config.ini  config_dev.ini  config_pre.ini  config_product.ini  config_test.ini
src/det_evl_eng/: Makefile  evl.engeneral.cpp  object_pool.cpp  object_pool.hpp  task.cpp  task.hpp
src/det_evl_eng/kh_evl_linux/: changelog  md5.txt
src/det_evl_eng/kh_evl_linux/models/evl.cngeneral.child.0.3.1/: cfg.json
src/det_evl_eng/kh_evl_linux/models/evl.engeneral.child.0.3.1/: cfg.json
src/lib/release/: libgflags.so.2.2.0  libgflags_nothreads.so.2.2.0  libgpr.so.6  libgrpc++_unsecure.so.1  libgrpc_unsecure.so.6  libprotobuf.so.15  libz.so.1.2.11
src/share/pkgconfig/: zlib.pc
